# actix_web_test

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/controller/: user_controller.rs
src/controller/users/: model.rs  service.rs
src/endpoints/: model.rs  routes.rs
src/entity/: mod.rs  test_entity.rs  user_entity.rs
