[package]
name = "hello-world"
version = "0.1.0"
authors = ["pengqi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"

#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.2.2"

#BigDecimal支持(可选)
bigdecimal = "0.2"

#rbatis支持，版本保持一致(必须)
rbatis-core = { version = "1.6.1", features = ["all"]}
rbatis =  { version = "1.6.1" } 
rbatis-macro-driver = { version = "1.6.1" }
lazy_static = "1.4.0"